hphp/hack/test/typecheck/tconst/disallow_access_on_nullable.php.exp
File "disallow_access_on_nullable.php", line 6, characters 18-24:
Invalid type hint (Typing[4062])
  File "disallow_access_on_nullable.php", line 6, characters 24-24:
  You are trying to access the type constant `B` but this is a nullable type
  File "disallow_access_on_nullable.php", line 4, characters 18-19:
  Definition is here
